# rget

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml
src/: config.rs  download.rs  error.rs  lib.rs  main.rs  network.rs  output.rs  partial.rs  util.rs
src/protocol/: ftp.rs  mod.rs
src/ui/: mod.rs  multibar.rs  multibar_indicatif.rs
