[package]
name = "rget"
version = "0.3.2"
authors = ["Arcterus <arcterus@mail.com>"]
description = "A download accelerator partially inspired by https://github.com/huydx/hget."
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/Arcterus/rget"
repository = "https://github.com/Arcterus/rget"

[dependencies]
reqwest = "0.7"
clap = "2"
term = "0.4"
pbr = "1.0"
# ctrlc = "2.0.1"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
# ftp = "2.0.0"
# librsync = "0.2.0"

[badges]
travis-ci = { repository = "Arcterus/rget" }
appveyor = { repository = "Arcterus/rget" }
