[package]
name = "rget"
version = "0.4.0"
authors = ["Arcterus <arcterus@mail.com>"]
description = "A download accelerator partially inspired by https://github.com/huydx/hget."
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/Arcterus/rget"
repository = "https://github.com/Arcterus/rget"

[features]
default = ["indicatif"]

[dependencies]
reqwest = "0.8"
clap = "2.27"
term = "0.4"
# ctrlc = "2.0.1"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
failure_derive = "0.1"
number_prefix = "0.2.7"
broadcast = "0.1.0"
##ftp = { version = "2.2.1", features = ["secure"] }
# NOTE: ftp uses an old version of ssl for secure, so it doesn't compile
ftp = "2.2.1"
# librsync = "0.2.0"
indicatif = { version = "0.9", optional = true }
pbr = {version = "1.0.1", optional = true}

[[bin]]
name = "rget"
required-features = ["indicatif"]

[badges]
travis-ci = { repository = "Arcterus/rget" }
appveyor = { repository = "Arcterus/rget" }
